🐞 fix: layout issues

--- a/index_files/lrtk.css
+++ b/index_files/lrtk.css
@@ -13,7 +13,7 @@ button::-moz-focus-inner,input::-moz-focus-inner{padding:0;border:0;}
 .prev:hover,.next:hover,.nav-main a:hover,.nav-main a.cur{opacity:1;-moz-opacity:1;filter:alpha(opacity=100);}
 .item{display:block;width:100%;height:5px;position:absolute;z-index:98;top:404px;left:0;text-align:center;}
 .item a{display:inline-block;width:24px;height:5px;margin-right:11px;background:#333;opacity:0.6;-moz-opacity:0.6;filter:alpha(opacity=60);overflow:hidden;}
-.item a.cur{background:#fff;}
+.item a.cur{background:#ff0000;}
 .slide-box,.slide{display:block;width:100%;height:420px;overflow:hidden;}
 .slide-box{position:relative;}
 .slide{display:none;height:420px;padding-top:30px;background:#fff;position:relative;position:absolute;z-index:8;}
