--- a/index_files/style.css
+++ b/index_files/style.css
@@ -80,7 +80,7 @@
 	width: 930px;
 	height:auto;
 	float:right;
-	color: #C1BFB5;
+	color: #c1b5b5;
 	font-size:16px;
     font-weight: 600;
 	line-height:150px;
